--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,8 @@
   ],
   "dependencies": {
     "font-awesome": "~4.4.0",
-    "angular": "~1.4.7"
+    "angular": "~1.4.7",
+    "angular-route": "^1.5.3",
+    "angular-ui-router": "^0.2.18"
   }
 }
