--- a/package.json
+++ b/package.json
@@ -29,5 +29,9 @@
   },
   "engines": {
     "node": ">=0.10.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.1",
+    "mongoose": "^4.4.15"
   }
 }
